--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,18 @@
 {
-  "manifest_version": 2,
-
-  "name": "Poketrump",
-  "description": "This extension changes any mention of Donald Trump to the name of a random Pokémon.",
-  "version": "1.0",
-
-  "browser_action": {
-    "default_icon": "bellossom-icon.png",
-    "default_popup": "popup.html"
-  },
-  "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
-  ]
+"manifest_version": 2,
+    "name": "Poketrump",
+    "description": "Changes any mention of Donald Trump to the name of a random Pokémon. Makes you happy.",
+    "version": "0.1",
+    "content_scripts": [
+        {
+            "matches": [
+                "http://*/*",
+                "https://*/*"
+            ],
+            "js": [
+                "content.js"
+            ],
+            "run_at": "document_end"
+        }
+    ]
 }
